[package]
name = "rdxl_scaffolding"
version = "0.0.19"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT OR Apache-2.0"
description = "Rdxl Prefabricated HTML Components"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/rdxl_scaffolding"
keywords = ["html","scaffolding","templates"]

[dependencies]
rdxl = "0.4.13"

[[bin]]
name = "build_index"
path = "src/build_index.rs"
